create footer feture

--- a/public/index.html
+++ b/public/index.html
@@ -1863,8 +1863,75 @@
   <!-- filter layer -->
   <div id="layer" class="w-screen h-screen fixed top-0 left-0 bg-black/40 z-30 hidden md:hidden backdrop-blur-[2px]">
   </div>
+  <!-- --------------------------------------- Footer --------------------------------------- -->
+  <footer class="w-full h-max min-h-96 py-14 px-50 bg-black/40 backdrop-blur-md text-white">
+    <div class="container flex flex-col gap-10">
+
+      <div class="w-full flex justify-between items-center">
+
+        <div class="flex gap-3 items-center h-max">
+          <img src="./images/app-logo.png" alt="app.logo" class="w-16 h-auto">
+          <h2
+            class="font-Morabba-Bold text-5xl h-max bg-gradient-to-r from-orange-300 to-brown-300 bg-clip-text text-transparent">
+            قهوه پاندا
+          </h2>
+        </div>
+
+
+        <div class="flex h-14 bg-slate-100/40 rounded-xl overflow-hidden">
+          <input type="search" name="search" id="search" placeholder="محصول مورد نظر خود را جستجو کنید "
+            class="bg-transparent outline-none w-96 h-full px-6 placeholder:text-white/40" />
+          <button
+            class="h-full px-7 bg-orange-200 text-slate-800/50 hover:text-white hover:bg-orange-300 transition-colors text-lg font-arabic-Regular">جستجو</button>
+        </div>
+
+      </div>
+
+      <div class="flex justify-between">
+        <!-- ----------------- footer lists ----------------- -->
+        <div class="flex gap-10 items-start [&>ul]:space-y">
+          <ul class="[&>li]:transition-colors [&>li:hover]:text-orange-300">
+            <h3 class="text-lg mb-2 font-arabic-bold">محصولات پرفروش</h3>
+            <li>
+              <a href="#">قهوه زنبو برزیلی</a>
+            </li>
+            <li>
+              <a href="#">قهوه ویژه</a>
+            </li>
+            <li>
+              <a href="#">کپسول قهوه</a>
+            </li>
+            <li>
+              <a href="#">محصولات پر فروش</a>
+            </li>
+          </ul>
+
+          <ul class="[&>li]:transition-colors [&>li:hover]:text-orange-300">
+            <li>
+              <a href="#">بلاگ</a>
+            </li>
+            <li>
+              <a href="#">درباره ما</a>
+            </li>
+            <li>
+              <a href="#">تماس با ما</a>
+            </li>
+          </ul>
+        </div>
+        <!-- ------------ left side ------------ -->
+        <div class="flex gap-10 [&>div]:w-40">
+          <div>
+            <img src="images/footer/samandehi.png" alt="samandehi">
+          </div>
+          <div>
+            <img src="images/footer/ENAMADpng.parspng.com_.png" alt="ENAMAD">
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
   <!-- -------------------- scripts -------------------- -->
-  <script src="./js/script.js" defer></script>
+  <script src=" ./js/script.js" defer></script>
   <script src="./libs/swiper/swiper-bundle.min.js"></script>
   <script>
     var swiper = new Swiper(".mySwiper", {
