fix new product feature bag (responsive)

--- a/public/index.html
+++ b/public/index.html
@@ -616,7 +616,7 @@
 
       <!-- products card -->
       <div id="products-wrapper"
-        class="w-full h-max grid grid-cols-2  md:grid-cols-3 lg:grid-cols-4 xs:gap-[15px] gap-1.5 font-Samim">
+        class="w-full mx-auto h-max grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-4 xs:gap-[15px] gap-1.5 font-Samim">
 
         <!-- ----------------- ******** ----------------- -->
         <!-- ----------------- products ----------------- -->
