--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="./libs/swiper/swiper-bundle.min.css" />
-  <link rel="stylesheet" href="./css/app.css" />
-  <link rel="shortcut icon" href="./images/fav-icon.png" type="x-icon" />
+  <link rel="stylesheet" href="./public/libs/swiper/swiper-bundle.min.css" />
+  <link rel="stylesheet" href="./public/css/app.css" />
+  <link rel="shortcut icon" href="./public/images/fav-icon.png" type="x-icon" />
 
   <title>Panda cafeeShop</title>
 </head>
@@ -164,7 +164,7 @@
       <nav class="flex gap-4 xl:gap-8 items-center h-full">
         <!-- icon -->
         <div>
-          <img src="./images/app-logo.png" alt="golden cofee" class="w-full" />
+          <img src="./public/images/app-logo.png" alt="golden cofee" class="w-full" />
         </div>
         <!-- header list -->
         <ul
@@ -242,7 +242,7 @@
                   class="max-h-[334px] overflow-y-auto pb-1 divide-y divide-gray-100 dark:divide-white/10 border-b border-gray-400">
 
                   <div class=" pb-6 pt-5 flex">
-                    <img src="./images/products/p1.png" alt="product-1" class="w-30 h-30 select-none" />
+                    <img src="./public/images/products/p1.png" alt="product-1" class="w-30 h-30 select-none" />
 
                     <div class="flex flex-col justify-between font-bold">
                       <h2 class="text-zinc-700 dark:text-white line-clamp-2">قهوه اسپرسو بن مانو مدل پریسکا 250 گرمی
@@ -494,7 +494,7 @@
           class="w-full h-full overflow-y-auto pb-1 divide-y divide-gray-100 dark:divide-white/10 font-Samim">
 
           <div class=" pb-6 pt-5 flex gap2.5">
-            <img src="./images/products/p1.png" alt="product-1" class="w-[90px] h-[90px] select-none" />
+            <img src="./public/images/products/p1.png" alt="product-1" class="w-[90px] h-[90px] select-none" />
 
             <div class="flex flex-col justify-between font-bold">
               <h2 class="text-zinc-700 dark:text-white line-clamp-2 text-sm">قهوه اسپرسو بن مانو مدل پریسکا 250 گرمی
@@ -514,7 +514,7 @@
           </div>
 
           <div class=" pb-6 pt-5 flex">
-            <img src="./images/products/p1.png" alt="product-1" class="w-[90px] h-[90px] select-none" />
+            <img src="./public/images/products/p1.png" alt="product-1" class="w-[90px] h-[90px] select-none" />
 
             <div class="flex flex-col justify-between font-bold">
               <h2 class="text-zinc-700 dark:text-white line-clamp-2 text-sm">قهوه اسپرسو بن مانو مدل پریسکا 250 گرمی
@@ -624,7 +624,7 @@
 
         <div class="product">
           <!-- <div class="offer-present">12%</div> -->
-          <img src="./images/products/p4.png" alt="product-1" />
+          <img src="./public/images/products/p4.png" alt="product-1" />
 
           <div class="content-product">
             <h4 class="p-title">قهوه ترک بن مانو مقدار 250 گرم خط دوم اسم طولانی</h4>
@@ -700,7 +700,7 @@
         </div>
 
         <div class="product">
-          <img src="./images/products/p3.png" alt="product-1" />
+          <img src="./public/images/products/p3.png" alt="product-1" />
 
           <div class="content-product">
             <h4 class="p-title">قهوه ترک بن مانو مقدار 250 گرم خط دوم اسم طولانی</h4>
@@ -767,7 +767,7 @@
 
         <div class="product">
           <div class="offer-present">12%</div>
-          <img src="./images/products/p1.png" alt="product-1" />
+          <img src="./public/images/products/p1.png" alt="product-1" />
 
           <div class="content-product">
             <h4 class="p-title">قهوه ترک بن مانو مقدار 250 گرم خط دوم اسم طولانی</h4>
@@ -844,7 +844,7 @@
 
         <div class="product">
           <!-- <div class="offer-present">12%</div> -->
-          <img src="./images/products/p2.png" alt="product-1" />
+          <img src="./public/images/products/p2.png" alt="product-1" />
 
           <div class="content-product">
             <h4 class="p-title">قهوه ترک بن مانو مقدار 250 گرم خط دوم اسم طولانی</h4>
@@ -916,7 +916,7 @@
 
         <div class="product">
           <div class="offer-present">12%</div>
-          <img src="./images/products/p1.png" alt="product-1" />
+          <img src="./public/images/products/p1.png" alt="product-1" />
 
           <div class="content-product">
             <h4 class="p-title">قهوه ترک بن مانو مقدار 250 گرم خط دوم اسم طولانی</h4>
@@ -992,7 +992,7 @@
         </div>
 
         <div class="product">
-          <img src="./images/products/p2.png" alt="product-1" />
+          <img src="./public/images/products/p2.png" alt="product-1" />
 
           <div class="content-product">
             <h4 class="p-title">قهوه ترک بن مانو مقدار 250 گرم خط دوم اسم طولانی</h4>
@@ -1059,7 +1059,7 @@
 
         <div class="product">
           <!-- <div class="offer-present">12%</div> -->
-          <img src="./images/products/p4.png" alt="product-1" />
+          <img src="./public/images/products/p4.png" alt="product-1" />
 
           <div class="content-product">
             <h4 class="p-title">قهوه ترک بن مانو مقدار 250 گرم خط دوم اسم طولانی</h4>
@@ -1136,7 +1136,7 @@
 
         <div class="product">
           <!-- <div class="offer-present">12%</div> -->
-          <img src="./images/products/p3.png" alt="product-1" />
+          <img src="./public/images/products/p3.png" alt="product-1" />
 
           <div class="content-product">
             <h4 class="p-title">قهوه ترک بن مانو مقدار 250 گرم خط دوم اسم طولانی</h4>
@@ -1238,7 +1238,7 @@
       <div>
 
         <a href="#" class="sm:w-50 sm:h-50 w-35 h-35 block">
-          <img src="./images/categories/category1.png" alt="category1" />
+          <img src="./public/images/categories/category1.png" alt="category1" />
         </a>
         <span class="max-w-35 text-wrap">قهوه دمی و اسپرسو</span>
 
@@ -1246,7 +1246,7 @@
       <div>
 
         <a href="#" class="sm:w-50 sm:h-50 w-35 h-35 block">
-          <img src="./images/categories/category2.png" alt="category2" />
+          <img src="./public/images/categories/category2.png" alt="category2" />
         </a>
         <span class="max-w-35 text-wrap">لوازم جانبی</span>
 
@@ -1254,7 +1254,7 @@
       <div>
 
         <a href="#" class="sm:w-50 sm:h-50 w-35 h-35 block">
-          <img src="./images/categories/category3.png" alt="category3" />
+          <img src="./public/images/categories/category3.png" alt="category3" />
         </a>
         <span class="max-w-35 text-wrap">اسپرسو ساز</span>
 
@@ -1262,7 +1262,7 @@
       <div>
 
         <a href="#" class="sm:w-50 sm:h-50 w-35 h-35 block">
-          <img src="./images/categories/category4.png" alt="category4" />
+          <img src="./public/images/categories/category4.png" alt="category4" />
         </a>
         <span class="max-w-35 text-wrap">پک تستر قهوه</span>
 
@@ -1270,7 +1270,7 @@
       <div>
 
         <a href="#" class="sm:w-50 sm:h-50 w-35 h-35 block">
-          <img src="./images/categories/category5.png" alt="category5" />
+          <img src="./public/images/categories/category5.png" alt="category5" />
         </a>
         <span class="max-w-35 text-wrap">قهوه ترک</span>
 
@@ -1313,7 +1313,7 @@
 
           <div class="swiper-slide product">
             <div class="offer-present">12%</div>
-            <img src="./images/products/p3.png" alt="product-1">
+            <img src="./public/images/products/p3.png" alt="product-1">
 
             <div class="content-product">
               <h4 class="p-title">قهوه ترک بن مانو مقدار 250 گرم خط دوم اسم طولانی</h4>
@@ -1389,7 +1389,7 @@
           </div>
           <div class="swiper-slide product">
             <!-- <div class="offer-present">12%</div> -->
-            <img src="./images/products/p8.png" alt="product-1">
+            <img src="./public/images/products/p8.png" alt="product-1">
 
             <div class="content-product">
               <h4 class="p-title">قهوه ترک بن مانو مقدار 250 گرم خط دوم اسم طولانی</h4>
@@ -1465,7 +1465,7 @@
           </div>
           <div class="swiper-slide product">
             <!-- <div class="offer-present">12%</div> -->
-            <img src="./images/products/p7.png" alt="product-1">
+            <img src="./public/images/products/p7.png" alt="product-1">
 
             <div class="content-product">
               <h4 class="p-title">قهوه ترک بن مانو مقدار 250 گرم خط دوم اسم طولانی</h4>
@@ -1541,7 +1541,7 @@
           </div>
           <div class="swiper-slide product">
             <!-- <div class="offer-present">12%</div> -->
-            <img src="./images/products/p6.png" alt="product-1">
+            <img src="./public/images/products/p6.png" alt="product-1">
 
             <div class="content-product">
               <h4 class="p-title">قهوه ترک بن مانو مقدار 250 گرم خط دوم اسم طولانی</h4>
@@ -1617,7 +1617,7 @@
           </div>
           <div class="swiper-slide product">
             <!-- <div class="offer-present">12%</div> -->
-            <img src="./images/products/p5.png" alt="product-1">
+            <img src="./public/images/products/p5.png" alt="product-1">
 
             <div class="content-product">
               <h4 class="p-title">قهوه ترک بن مانو مقدار 250 گرم خط دوم اسم طولانی</h4>
@@ -1693,7 +1693,7 @@
           </div>
           <div class="swiper-slide product">
             <!-- <div class="offer-present">12%</div> -->
-            <img src="./images/products/p8.png" alt="product-1">
+            <img src="./public/images/products/p8.png" alt="product-1">
 
             <div class="content-product">
               <h4 class="p-title">قهوه ترک بن مانو مقدار 250 گرم خط دوم اسم طولانی</h4>
@@ -1781,7 +1781,7 @@
         class="max-w-[1260px] min-h-36 flex justify-between items-center lg:flex-row flex-col lg:gap-10 gap-5 bg-gradient-to-r from-emerald-500 to-emerald-600 rounded-xl sm:px-11 px-5 lg:py-0 py-8 ">
         <div class="w-full flex gap-5 items-center">
           <div class="w-[110px] h-[98px]">
-            <img src="./images/club/diamond.png" alt="diamond-cafee-club" />
+            <img src="./public/images/club/diamond.png" alt="diamond-cafee-club" />
           </div>
           <div class="space-y-4">
             <h2 class="xl:ext-5xl text-4xl text-white font-Morabba-Bold">کافی کلاب</h2>
@@ -1843,7 +1843,7 @@
       <div class="w-full flex justify-between items-center  sm:flex-row gap-10 sm:gap-0 flex-col">
 
         <div class="flex gap-3 items-center h-max">
-          <img src="./images/app-logo.png" alt="app.logo" class="w-16 h-auto">
+          <img src="./public/images/app-logo.png" alt="app.logo" class="w-16 h-auto">
           <h2
             class="font-Morabba-Bold text-5xl h-max bg-gradient-to-r from-orange-300 to-brown-300 bg-clip-text text-transparent">
             قهوه پاندا
@@ -1897,10 +1897,10 @@
         <!-- ------------ left side ------------ -->
         <div class="flex gap-10 sm:[&>div]:w-40 [&>div]:w-20 mb-5 sm:mb-0">
           <div>
-            <img src="images/footer/samandehi.png" alt="samandehi">
+            <img src="./public/images/footer/samandehi.png" alt="samandehi">
           </div>
           <div>
-            <img src="images/footer/ENAMADpng.parspng.com_.png" alt="ENAMAD">
+            <img src="./public/images/footer/ENAMADpng.parspng.com_.png" alt="ENAMAD">
           </div>
         </div>
       </div>
@@ -1908,8 +1908,8 @@
     </div>
   </footer>
   <!-- -------------------- scripts -------------------- -->
-  <script src=" ./js/script.js" defer></script>
-  <script src="./libs/swiper/swiper-bundle.min.js"></script>
+  <script src=" ./public/js/script.js" defer></script>
+  <script src="./public/libs/swiper/swiper-bundle.min.js"></script>
   <script>
     var swiper = new Swiper(".mySwiper", {
       slidesPerView: 2,
